fixed images miss aligning in gallery

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -105,6 +105,7 @@ img {
 	margin: 0 auto;
 	display: flex;
 	border-radius: 0.5em;
+	max-width: 100%;
 }
 
 #postInfo {
